--- a/templates/index.html
+++ b/templates/index.html
@@ -15,25 +15,27 @@
     <a href="/cadastro">
       <button>Cadastro</button>
     </a>
-    
+     <a href="/Index">
+      <img src="https://icons8.com/icon/44024/menu" alt="">
+     </a>
     
   </header>
   <main>
     <div class="card">
       <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" alt="Computador moderno" />
-      <h3>Computador Moderno</h3>
+      <h3>Sistema de Gerenciamento</h3>
     </div>
     <div class="card">
       <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=400&q=80" alt="Circuitos eletrônicos" />
-      <h3>Circuitos Eletrônicos</h3>
+      <h3>Robótica & automação</h3>
     </div>
     <div class="card">
       <img src="https://images.unsplash.com/photo-1518773553398-650c184e0bb3?auto=format&fit=crop&w=400&q=80" alt="Programação e códigos" />
-      <h3>Programação & Códigos</h3>
+      <h3>Desenolvimento Web</h3>
     </div>
     <div class="card">
       <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=400&q=80" alt="Tecnologia de rede" />
-      <h3>Tecnologia de Rede</h3>
+      <h3>Redes de Computadores</h3>
     </div>
   </main>
   <footer>
